k8s/distributed-transactions/03-billing-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-postgres
  namespace: distributed-transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-postgres
  template:
    metadata:
      labels:
        app: billing-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U billing_user -d billing
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U billing_user -d billing
            initialDelaySeconds: 15
            periodSeconds: 10

      volumes:
        - name: init-scripts
          configMap:
            name: billing-postgres-init
---
apiVersion: v1
kind: Service
metadata:
  name: billing-postgres
  namespace: distributed-transactions
spec:
  selector:
    app: billing-postgres
  ports:
    - port: 5432
      targetPort: 5432
