k8s/distributed-transactions/10-billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: distributed-transactions
spec:
  replicas: 1

  selector:
    matchLabels:
      app: billing-service

  template:
    metadata:
      labels:
        app: billing-service

    spec:
      containers:
        - name: billing-service
          image: alimzhankassenov/billing-service:outbox-inbox
          imagePullPolicy: Always

          ports:
            - containerPort: 8001

          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12

          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: distributed-transactions
spec:
  selector:
    app: billing-service

  ports:
    - port: 8001
      targetPort: 8001
