k8s/distributed-transactions/11-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: distributed-transactions
spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
        - name: notification-service
          image: alimzhankassenov/notification-service:outbox-inbox
          imagePullPolicy: Always

          ports:
            - containerPort: 8002

          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12

          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 20
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: distributed-transactions
spec:
  selector:
    app: notification-service

  ports:
    - port: 8002
      targetPort: 8002
