k8s/distributed-transactions/12-inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: distributed-transactions
spec:
  replicas: 1

  selector:
    matchLabels:
      app: inventory-service

  template:
    metadata:
      labels:
        app: inventory-service

    spec:
      containers:
        - name: inventory-service
          image: alimzhankassenov/inventory-service:1.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 8003

          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12

          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: distributed-transactions
spec:
  selector:
    app: inventory-service

  ports:
    - port: 8003
      targetPort: 8003
