k8s/distributed-transactions/13-delivery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  namespace: distributed-transactions
spec:
  replicas: 1

  selector:
    matchLabels:
      app: delivery-service

  template:
    metadata:
      labels:
        app: delivery-service

    spec:
      containers:
        - name: delivery-service
          image: alimzhankassenov/delivery-service:1.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 8004

          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12

          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: distributed-transactions
spec:
  selector:
    app: delivery-service

  ports:
    - port: 8004
      targetPort: 8004
