k8s/distributed-transactions/14-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distributed-transactions-ingress
  namespace: distributed-transactions
spec:
  ingressClassName: nginx

  rules:
    - host: arch.homework
      http:
        paths:
          - path: /billing
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 8001

          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8002

          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8003

          - path: /delivery
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 8004

          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
